# ComfyUI-ImageMetadataExtension

./: README.md  pyproject.toml
.github/workflows/: publish.yml
assets/: workflow.json
py/: capture.py  trace.py
py/defs/: __init__.py  captures.py  formatters.py  samplers.py
py/defs/ext/: ComfyUI-GGUF.py  ComfyUI-WeilinNodes.py  comfyui_easy_civitai_xt_nodes.py  comfyui_gguf.py  comfyui_weilinnodes.py  easyuse_nodes.py
py/nodes/: node.py
py/utils/: embedding.py
