[project]
name = "comfyui-imagemetadataextension"
description = "Custom node for ComfyUI. It adds additional metadata for saved images, ensuring compatibility with the Civitai website."
version = "1.1.2"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/edelvarden/ComfyUI-ImageMetadataExtension"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "edelvarden"
DisplayName = "ComfyUI-ImageMetadataExtension"
Icon = ""
